--- a/index.html
+++ b/index.html
@@ -2,7 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title></title>
+    <title>BarCode Scanner</title>
+    <style>
+      #preview {
+        margin: 300px auto;
+        width: 480px;
+        display: block;
+        height: 640px;
+      }
+      canvas {
+        position: absolute;
+        top: 300px;
+        left: 0;
+        right: 0;
+      }
+    </style>
   </head>
   <body>
     <div id="preview"></div>
