--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
   */
 
     Quagga.onDetected(function (data) {
+      console.log(data);
       alert(data.codeResult.code);
       console.log(data.codeResult.code);
     });
